# exam

./: .gitignore  CHANGES.txt  README.md  pyproject.toml  requirements.txt
Formula/: exam.rb
exam/: MANIFES.in  __init__.py  __main__.py  config.yaml  exam.py  sample_exam.yaml  text_compile.sh  text_update.sh  version.py
exam/locales/: base.pot
exam/locales/en/LC_MESSAGES/: base.po
exam/locales/pt_BR/LC_MESSAGES/: base.mo  base.po
exam/questions/test1/: test1_F_q0001.tex  test1_F_q0002.tex
exam/template/: exam.cls  exam_model.tex  exam_model_result.tex  header_model.tex  instructions.tex
