[project]
name = "exam"
version = "0.0.9"
authors = [
  { name="Razer Anthom Nizer Rojas Montaño", email="razer.anthom@gmail.com" },
]
description = "An open source project to generate exams"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'pyaml >= 21.10.1',
  'typer >= 0.7.0'
]

[project.urls]
"Homepage" = "https://github.com/razeranthom/exam"
"Bug Tracker" = "https://github.com/razeranthom/exam/issues"

[project.scripts]
exam = "exam.exam:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"